# brainblend

./: LICENSE  README.md  pyproject.toml
src/: test.blend
src/brainblend/: __init__.py  optimized.pyx
src/nibablender/: __init__.py
